# nsswitch-config

./: .gitignore  NEWS  README.md  meson.build  meson_options.txt
.github/workflows/: ci-opensuse.yml
ci/: install-dependencies.sh
data/usr/share/nsswitch.conf.d/: 10-header.conf  20-files.conf  30-compat.conf  40-systemd.conf  50-dns.conf  60-usrfiles.conf
doc/: meson.build
doc/man/: nsswitch-config.8
src/: nsswitch-config.c
tests/: meson.build  tst-db.sh  tst-nsswitch1.sh  tst-nsswitch2.sh  tst-nsswitch3.sh  tst-nsswitch4.sh  tst-nsswitch5.sh  tst-nsswitch6.sh  tst-nsswitch7.sh  tst-nsswitch8.sh  tst-overwrite.sh  tst-templates.sh
tests/db/etc/: nsswitch.cmp
tests/db/etc/nsswitch.conf.d/: 15-db.conf
tests/overwrite/etc/: nsswitch.cmp
tests/overwrite/etc/nsswitch.conf.d/: 20-bar.conf
tests/overwrite/usr/share/nsswitch.conf.d/: 10-foo.conf  20-bar.conf  30-baz.conf
tests/templates/etc/: nsswitch.cmp
tests/test1/: nsswitch.out
tests/test1/etc/nsswitch.conf.d/: 10-foo.conf  20-bar.conf  30-bar2.conf  40-bar3.conf
tests/test2/etc/: nsswitch.cmp
tests/test2/etc/nsswitch.conf.d/: 20-bar.conf
tests/test3/etc/: nsswitch.cmp  nsswitch.conf
tests/test3/etc/nsswitch.conf.d/: 20-bar.conf
tests/test3/usr/share/: nsswitch.conf
tests/test3/usr/share/nsswitch.conf.d/: 10-foo.conf
tests/test4/etc/: nsswitch.cmp
tests/test4/etc/nsswitch.conf.d/: 20-compat.conf  40-dns.conf
tests/test4/usr/share/: nsswitch.conf
tests/test4/usr/share/nsswitch.conf.d/: 10-mdns.conf  30-dns.conf
tests/test5/etc/: nsswitch.cmp  nsswitch.conf
tests/test5/usr/share/nsswitch.conf.d/: 10-foo.conf
tests/test6/etc/: nsswitch.cmp
tests/test7/etc/: nsswitch.conf
tests/test8/etc/: nsswitch.conf.admin
