# This file builds and runs the unit tests

test('tst-nsswitch1', find_program('tst-nsswitch1.sh'))
test('tst-nsswitch2', find_program('tst-nsswitch2.sh'))
test('tst-nsswitch3', find_program('tst-nsswitch3.sh'))
test('tst-nsswitch4', find_program('tst-nsswitch4.sh'))
test('tst-nsswitch5', find_program('tst-nsswitch5.sh'))
test('tst-nsswitch6', find_program('tst-nsswitch6.sh'))
test('tst-nsswitch7', find_program('tst-nsswitch7.sh'))
test('tst-nsswitch7', find_program('tst-nsswitch8.sh'))
